Clipping Path Service Page Fixed

--- a/src/index.css
+++ b/src/index.css
@@ -31,5 +31,5 @@ code {
     height: 20px !important;
     border-radius: 50%;
     cursor: pointer;
-    background-color:  !important
+    /* background-color:  !important */
 }
